postgresql-common (82) UNRELEASED; urgency=low

  * debian/control: Fix 'commmon' typo. (Closes: #449532)

 -- Martin Pitt <mpitt@debian.org>  Sat, 10 Nov 2007 19:08:01 -0500

postgresql-common (81) unstable; urgency=low

  * debian/supported_versions: Welcome, Ubuntu Hardy (8.04)!
  * debian/postgresql-common.templates, debian/control: Language and grammar
    improvements, thanks a lot to Christian Perrier and the l10n teams!
    (Closes: #446457)
  * Update debconf translations, thanks to all translators!
    - French (Christian Perrier) (Closes: #446978)
    - Vietnamese (Clytie Siddall) (Closes: #447009)
    - Finnish (Esko Arajärvi) (Closes: #447045)
    - Italian (Luca Monducci) (Closes: #447052)
    - Galician (Jacobo Tarrio) (Closes: #447054)
    - Basque (Piarres Beobide) (Closes: #447131)
    - Spanish (Javier Fernández-Sanguino Peña) (Closes: #447417)
    - Czech (Miroslav Kure) (Closes: 447436)
    - Portugese (Miguel Figueiredo) (Closes: #447642)
    - Brazilian Portugese (Eder L. Marques) (Closes: #447881)
    - Russian (Sergey Alyoshin) (Closes: #448768)
    - German (Martin Pitt)

 -- Martin Pitt <mpitt@debian.org>  Sat, 03 Nov 2007 10:13:46 -0400

postgresql-common (80) unstable; urgency=low

  * pg_upgradecluster: Fix locale error checking.
  * pg_upgradecluster: Use cluster_exists() instead of
    cluster_data_directory().
  * PgCommon.pm: Fix cluster_data_directory() to consider the data_directory
    setting in postgresql.conf, which should trump the /pgdata symbolic link.
  * debian/init.d-functions: Check for 'postgresql.conf' instead of 'pgdata'
    in the test for a valid cluster configuration directory, since 'pgdata' is
    optional now.
  * pg_createcluster: Do not create pgdata symlinks to the data directory in
    /etc any more when configuring a >= 8.0 cluster. Use the data_directory
    configuration option instead. (Part of #444689)
  * t/020_create_sql_remove.t: Check that clusters still work when replacing